# schedule_facebook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  appveyor.yml  azure-pipelines.yml  deploy.sh  pyproject.toml
.github/workflows/: build-desktop-windows.yml
desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
desktop/src/main/: main.ts  sidecarProcess.ts  tray.ts  updater.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  index.html  (+3 more)
docs/: development.md  manual-verification.md  safety-boundaries.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: build-desktop.ps1  build-desktop.sh  build-sidecar.ps1  build-sidecar.sh  release-desktop-update.sh  release-desktop-windows.ps1  start-container.sh  sync-env-to-containerapp.sh
src/facebook_group_tool/: __init__.py  config.py  main.py
tests/: conftest.py
tests/automation/: test_checkpoint_detector.py  test_facebook_group_sync.py  test_post_composer.py
tests/e2e/: test_dashboard_smoke.py
tests/integration/: test_api_routes.py  test_connector_api.py  test_group_sync_feature.py  test_repositories.py
tests/unit/: test_app_health.py  test_connector_config.py  test_connector_core.py  test_connector_job_runner.py  test_connector_sidecar.py  test_domain_entities.py  test_run_workflows.py  test_safety_guard.py  test_scheduling_service.py  test_use_cases.py
(+111 files in other folders)
