[project]
name = "facebook-group-tool"
version = "0.1.0"
description = "Local dashboard for safe Facebook group posting workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiofiles>=24.1.0",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.4",
  "playwright>=1.49.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.19",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
  "websockets>=16.0",
]

[project.scripts]
facebook-group-connector = "facebook_group_tool.connector.main:main"
facebook-group-connector-sidecar = "facebook_group_tool.connector.sidecar:main"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pyright>=1.1.390",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pyinstaller>=6.11.0",
  "ruff>=0.8.4",
  "testcontainers[postgres]>=4.9.0"
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require PostgreSQL or external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/facebook_group_tool/infrastructure/database/migrations"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
